# bento_etl

./: .gitignore  Dockerfile  README.md  all_mappings_aggregate.json  config.yml  dev.Dockerfile  docker-compose.dev.yaml  docker-compose.yaml  entrypoint.bash  ontology_mappings.json  phenov2-schema-katsu_onliclinical.json  pyproject.toml  run.bash  run.dev.bash
.github/workflows/: build.yml  lint.yml  test.yml
bento_etl/: authz.py  config.py  constants.py  db.py  logger.py  main.py  models.py  pipeline_config.py
bento_etl/extractors/: api_fetch_extractor.py  base.py  dependencies.py  s3_extractor.py
bento_etl/loaders/: base.py  dependencies.py  experiments_loader.py  phenopackets_loader.py  print_loader.py
bento_etl/routers/: jobs.py  phenopackets_result.json  test_sources.py
bento_etl/transformers/: api_schema_fetch.py  base.py  dependencies.py
bento_etl/transformers/plugins/: phenopacket_v2_json.py  transformer_phenopacket.py
bento_etl/transformers/plugins/experiments/: experiments_transformer.py  utils.py
bento_etl/transformers/plugins/experiments/mappings/: pcgl_experiments_mappings.json  pcgl_experiments_ontology_mappings.json
bento_etl/transformers/plugins/phenopackets/: phenopackets_transformer.py  utils.py
bento_etl/transformers/plugins/phenopackets/mappings/: pcgl_phenopackets_mappings.json  pcgl_phenopackets_ontology_mappings.json
docs/: mappings.md
mappings/pcgl/: pcgl_data_dictionary_prod_V1.0_experiments_mappings.csv  pcgl_data_dictionary_prod_V1.0_phenopacketsV2_mappings.csv
pipelines/: pcgl_experiments.json  pcgl_phenopackets.json  test_experiments.json  test_phenopackets.json
tests/: conftest.py  test_authz.py  test_database.py  test_extractor.py  test_jobs.py  test_jobs_router.py  test_loader.py  test_main.py  test_pipeline.py  test_service_info.py  test_transformer.py
tests/data/: synthetic_experiments.json  synthetic_phenopackets_v2.json  synthetic_phenopackets_v2.jsonl
