[project]
name = "bento-etl"
version = "0.1.0"
description = "ETL service for Bento"
authors = [
    {name = "Victor Rocheleau",email = "victor.rocheleau@mcgill.ca"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
fastapi = ">=0.121.0,<0.122.0"
pydantic = ">=2.11.4,<3.0.0"
bento-lib = ">=14.0.1,<15.0.0"
pydantic-settings = ">=2.9.1,<3.0.0"
structlog = ">=25.3.0,<26.0.0"
polars = ">=1.30.0,<2.0.0"
httpx = ">=0.28.1,<0.29.0"
sqlmodel = ">=0.0.24,<0.0.25"
uvicorn = ">=0.38.0,<0.39.0"

[tool.poetry]
packages = [{include = "bento_etl"}]
name = "bento-etl"
version = "0.1.0"
description = "ETL service for Bento"
authors = [
    "Victor Rocheleau <victor.rocheleau@mcgill.ca>"
]

[tool.poetry.group.dev.dependencies]
aioresponses = "^0.7.8"
coverage = "^7.8.0"
debugpy = "^1.8.14"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
pytest-cov = "^7.0.0"
ruff = "^0.14.1"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
